objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emission_Standard__c</fullName>
        <label>Abgasnorm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Emission_Standards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enddatum_Finanzierung__c</fullName>
        <label>Enddatum Finanzierung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engine_Code__c</fullName>
        <label>Motorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <label>Motortyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Engine_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Mileage__c</fullName>
        <defaultValue>500000</defaultValue>
        <label>Voraussichtliche Kilometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Ausgabe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Expenses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Expiration_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Expiration_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Expiration_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Versicherungsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ext_Review__c</fullName>
        <label>Ext. Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Record_Type_Id__c</fullName>
        <formula>IF( RecordTypeId = '0120Y000000W0CY', '0121r000000d47I', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_Date__c</fullName>
        <label>External Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Facebook_Ad_ID__c</fullName>
        <label>Facebook Ad ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Ad_Name__c</fullName>
        <label>Facebook Ad Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Campaign_ID__c</fullName>
        <label>Facebook Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Campaign_Name__c</fullName>
        <label>Facebook Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Set_ID__c</fullName>
        <label>Facebook Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Installment__c</fullName>
        <label>Schlussrate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financed_by__c</fullName>
        <label>Finanziert von</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Contract_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finanzierungsvertrag aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Contract_Date_Category__c</fullName>
        <label>Finanzierungsvertragsdatum Kategorie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financing_Contract_Date_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing_Contract_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Financing_Contract_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Financing_Contract_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Financing_Contract_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Contract Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Contract_Date__c</fullName>
        <label>Finanzierungsvertragsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Contract_Total_Value__c</fullName>
        <label>Finanzierungsvertrag Gesamtbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Finanzierungsart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financing_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finanzierungsvertrag_Gesamtbetrag__c</fullName>
        <label>Finanzierungsvertrag Gesamtbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_up_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Anzahl Follow-ups</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Journey_1__c</fullName>
        <label>Follow up Journey 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Journey_2__c</fullName>
        <label>Follow up Journey 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Journey_3__c</fullName>
        <label>Follow up Journey 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Zeit bis Follow-up</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Variant__c</fullName>
        <label>Follow-up Variant</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup_starten_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatisches Follow-up starten2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Hash_1__c</fullName>
        <label>Form Hash 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Id__c</fullName>
        <label>Formular Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Step_2_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Product__c = 'Dieselskandal',IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/dieselskandal-002' + Testing_Version__c + '/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/005/' + Form_Hash_1__c),IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/lebensversicherung-002/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/lebensversicherung-002/' + Form_Hash_1__c)),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Formularstufe 2 - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Step_2_Staging_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Product__c = 'Dieselskandal',IF(Account_Id__c = '0010Y00000eCUS9','http://staging.forms.cloudworx.agency/verbraucherhilfe24/dieselskandal-002' + Testing_Version__c + '/' + Form_Hash_1__c,'https://staging.forms.cloudworx.agency/verbraucherrechte24/005/' + Form_Hash_1__c),IF(Account_Id__c = '0010Y00000eCUS9','http://staging.forms.cloudworx.agency/verbraucherhilfe24/lebensversicherung-002/' + Form_Hash_1__c,'https://staging.forms.cloudworx.agency/verbraucherrechte24/lebensversicherung-002/' + Form_Hash_1__c)),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Formularstufe 2 (Staging) - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formstep_0_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Account_Id__c = '0011t00000HUP05','https://form.verbraucherhilfe24.de/dieselskandal-000' + Testing_Version__c + '/' + Form_Hash_1__c,'nicht verfügbar'),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Zwischenstufe - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formstep_0_Staging_Link__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Account_Id__c = '0010Y00000eCUS9','http://staging.forms.cloudworx.agency/verbraucherhilfe24/dieselskandal-000' + Testing_Version__c + '/' + Form_Hash_1__c,'nicht verfügbar'),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zu Zwischenstufe (Staging) - OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Savings__c</fullName>
        <label>Zukünftige Ersparnis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gericht_des_Kunden__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gerichtskosten_GK_RE__c</fullName>
        <label>Gerichtskosten (GK-RE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H_he_Finanzierungsbetrag__c</fullName>
        <label>Höhe Finanzierungsbetrag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Hoehe_Finanzierungsbetrag</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Legal_Protection_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rechtsschutzversicherung vorhanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HerokuID__c</fullName>
        <label>HerokuID</label>
        <length>62</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inception_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Inception_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Inception_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Inception_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inception Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inception_Date__c</fullName>
        <label>Versicherungsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inception_Year__c</fullName>
        <formula>TEXT(YEAR(Inception_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inception Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Aquisition_Costs__c</fullName>
        <label>Abschlusskosten Ansetzen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Contract_Country__c</fullName>
        <label>Land des Abschlusses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Insurance_Contract_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Name__c</fullName>
        <formula>Insurance__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <label>Versicherungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Rate__c</fullName>
        <label>Tarifbezeichnung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Status__c</fullName>
        <formula>IF(Termination_Date__c &lt; Today(),"bereits gekündigt",IF(Expiration_Date__c &lt; Today(),"regulär abgelaufen",IF(Active_Non_contributory_Periods__c &gt; 0,"beitragsfrei gestellt","noch aktiv")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versicherungsstatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Versicherungstyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Insurance_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Versicherung</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Lebensversicherung</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Anfragen (Versicherung)</relationshipLabel>
        <relationshipName>Opportunities_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insured_Person_1_Date_Of_Birth__c</fullName>
        <label>Versicherte Person 1 Geburtsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured_Person_1_First_Name__c</fullName>
        <label>Versicherte Person 1 Vorname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Person_1_Gender__c</fullName>
        <label>Versicherte Person 1 Geschlecht</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Genders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insured_Person_1_Last_Name__c</fullName>
        <label>Versicherte Person 1 Nachname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Person_2_Date_Of_Birth__c</fullName>
        <label>Versicherte Person 2 Geburtsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured_Person_2_First_Name__c</fullName>
        <label>Versicherte Person 2 Vorname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Person_2_Gender__c</fullName>
        <label>Versicherte Person 2 Geschlecht</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Genders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insured_Person_2_Last_Name__c</fullName>
        <label>Versicherte Person 2 Nachname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Person_3_Date_Of_Birth__c</fullName>
        <label>Versicherte Person 3 Geburtsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured_Person_3_First_Name__c</fullName>
        <label>Versicherte Person 3 Vorname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Person_3_Gender__c</fullName>
        <label>Versicherte Person 3 Geschlecht</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Genders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insured_Person_3_Last_Name__c</fullName>
        <label>Versicherte Person 3 Nachname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intermediary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vermittler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Vermittler)</relationshipLabel>
        <relationshipName>Opportunities_Intermediary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <formula>IF(ON_CompensationRateInclTax__c, ON_CompensationRate__c * ON_ObtainedAmount__c / (1 + ON_TaxRate__c), ON_CompensationRate__c * ON_ObtainedAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rechnungsbetrag (netto)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoices_Without_Accounting_Agent__c</fullName>
        <label>Invoices Without Accounting Agent</label>
        <summaryFilterItems>
            <field>Invoice__c.Accounting__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_My_Opportunity__c</fullName>
        <formula>OR($User.Id = Callcenter__c,$User.Id = Backoffice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kaufdatum__c</fullName>
        <label>Kaufdatum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Kaufdatum</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Stage_Change__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Letzter Statuswechsel</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lawsuit_Type__c</fullName>
        <label>Klagemodell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antragsmodell</fullName>
                </value>
                <value>
                    <fullName>Policenmodell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Kanzlei</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Anfragen (Kanzlei)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gerichtskosten bezahlt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Company_Name__c</fullName>
        <formula>Legal__r.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Process_Type__c</fullName>
        <defaultValue>'Internal'</defaultValue>
        <label>Anwaltsprozess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Process_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Protection_Deductible__c</fullName>
        <label>Selbstbehalt für Rechtsschutz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance_Number__c</fullName>
        <label>Rechtsschutzversicherungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rechtsschutzversicherung</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Rechtsschutzversicherung</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Anfragen (Rechtsschutzversicherung)</relationshipLabel>
        <relationshipName>Opportunities_Legal_Protection_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anwalt</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Legal</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Management</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkConfirmNewsletter__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/ConfirmNewsletter?token=' + Token__c,'Newsletter bestätigen','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Newsletter bestätigen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_MFK_Einzelklage__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/MembershipConfirmation?token=' + Token__c,'Link MFK Einzelklage','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link MFK Einzelklage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zum_Dokumentenupload__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/MissingDocuments?token=' + Token__c,'Link zum Dokumentenupload','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Dokumentenupload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zum_Rueckrufformular__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/RueckrufFormular?token=' + Token__c,'Link zum Rückrufformular','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Rückrufformular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zur_ABG_Bestaetigung__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/ConfirmTOS?token=' + Token__c,'Link zur AGB Bestätigung','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zur ABG Bestätigung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zur_Abmeldung__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/Abmelden?token=' + Token__c,'Link zur Abmeldung','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zur Abmeldung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFK_Einzelklage_Timestamp__c</fullName>
        <label>MFK Einzelklage Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MFK_Einzelklage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFK Einzelklage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatierungsdatumtest__c</fullName>
        <label>Mandatierungsdatumtest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mandatierungstest__c</fullName>
        <label>Mandatierungstest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mandating_Date__c</fullName>
        <label>Mandatierungsdatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mileage_On_Purchase__c</fullName>
        <label>Kilometerstand bei Kauf</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_On_Sale__c</fullName>
        <label>Kilometerstand bei Verkauf</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modell__c</fullName>
        <label>Modell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Modell</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modifications_Done_Clean__c</fullName>
        <formula>IF(Modifications_Done__c = true,"true","false")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modifications Done Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifications_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Umrüstung bereits erfolgt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monatliche Raten</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Further_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keine weiteren Unterlagen vorhanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Bearbeitungsnummer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Pending_Vollmacht_Docs__c</fullName>
        <inlineHelpText>Do not manipulate it manually. Used to keep track of pending docgen operations and subsequent email sending.</inlineHelpText>
        <label>Number of Pending Vollmacht Docs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ON_Account__c</fullName>
        <description>Specifies the Salesforce account ID or external ID.</description>
        <formula>Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ON-Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_CompensationRateInclTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON-Verguetungssatz inkl. USt.?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ON_CompensationRate__c</fullName>
        <label>ON-Verguetungssatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ON_CustomerNo__c</fullName>
        <formula>Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ON-Kundennummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_InvoiceBuildError__c</fullName>
        <description>Shows errors that occurred during the last invoice run.</description>
        <label>Last Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The invoice that resulted from this record.</description>
        <label>Invoice</label>
        <referenceTo>ONB2__Invoice__c</referenceTo>
        <relationshipLabel>Anfragen</relationshipLabel>
        <relationshipName>Anfragen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ON_IsItem__c</fullName>
        <description>Forces JustOn to use this object as the source for both the invoice and the invoice line items.</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ON_LastInvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the last invoice run that has processed this object.</description>
        <label>Invoice Run</label>
        <referenceTo>ONB2__InvoiceRun__c</referenceTo>
        <relationshipLabel>Anfragen</relationshipLabel>
        <relationshipName>Anfragen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ON_MailingCity__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_MailingCountry__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_MailingFirstName__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_MailingLastName__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_MailingPostalCode__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_MailingStreet__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_MandateDate__c</fullName>
        <label>ON-Mandatierungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ON_ObtainedAmount__c</fullName>
        <label>ON-Erstrittener_Betrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ON_Quantity__c</fullName>
        <description>The quantity to be billed for this invoice line item.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ON_Salutation__c</fullName>
        <formula>Contact__r.Salutation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ON-Anrede</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_ServiceDate__c</fullName>
        <description>The record will be invoiced when the date is null or within the service period of the invoice run.</description>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ON_TaxRate__c</fullName>
        <formula>0.19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ON-USt-Satz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>